--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "./src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "live-server --host=localhost --port=3999 --open=/dist",
-    "start_webpack": "webpack --mode development --watch",
+    "test": "jest ./tests/",
+    "webpack_watch": "webpack --mode development --watch",
+    "start": "webpack-dev-server",
     "build": "webpack --mode production"
   },
   "keywords": [],
@@ -16,16 +16,16 @@
     "@babel/core": "^7.12.7",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
+    "@types/jest": "^26.0.17",
     "babel-loader": "^8.2.1",
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
-    "http-server": "^0.12.3",
+    "jest": "^26.6.3",
     "live-server": "^1.2.1",
-    "node-static": "^0.7.11",
     "style-loader": "^2.0.0",
     "webpack": "^5.6.0",
-    "webpack-cli": "^4.2.0",
+    "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
